bug 482091. patch from Jeff Muizelaar.  fix cash on maemo with plugins